tests/fail/fail_9.mason
module x;

proc foo(f: f64, f: f64);